--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,10 @@
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=587
+SMTP_USER=0d5b25e0c124e9
+SMTP_PWD=d6839fe5464b74
+JWT_SECRET=xEFnruxlnhmgx0HT
+
+MONGODB_NAME=SentimentAnalysis
+
 MONGODB_URL=mongodb://127.0.0.1:27017/SentimentAnalysis
 # MONGODB_URL= mongodb+srv://raghavmern:xEFnruxlnhmgx0HT@Cluster0.aguznsx.mongodb.net/SentimentAnalysis
