--- a/backend/package.json
+++ b/backend/package.json
@@ -10,17 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.5",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "nodemon": "^3.0.2",
-    "bcryptjs": "^2.4.3",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
+    "nodemon": "^3.0.2",
+    "sentiment": "^5.0.2",
     "slugify": "^1.6.6"
   }
 }
