sentiments list and adding done from frontend

--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,7 @@ SMTP_PORT=587
 SMTP_USER=0d5b25e0c124e9
 SMTP_PWD=d6839fe5464b74
 JWT_SECRET=xEFnruxlnhmgx0HT
+FRONTEND_URL= http://localhost:5173/
 
 MONGODB_NAME=SentimentAnalysis
 MONGODB_URL=mongodb://127.0.0.1:27017/SentimentAnalysis
