--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "dompurify": "^3.0.8",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
     "primereact": "^10.2.1",
